tests/0055-function-nested-call-with-arguments.src.err
ERROR: Expected 'Identifier' but got 'return'
 | let return_arg = fun (arg) {
       ^
COMPILATION FAILED
